--- a/package.json
+++ b/package.json
@@ -2,34 +2,13 @@
   "name": "notes-app",
   "version": "1.0.0",
   "description": "A simple Notes application with CRUD functionality",
-  "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "nodemon backend/server.js",
-    "dev:client": "next dev",
-    "build": "next build",
-    "start": "node backend/server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "uuid": "^9.0.0",
-    "zod": "^3.22.2",
-    "next": "^13.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.29",
-    "autoprefixer": "^10.4.15",
-    "clsx": "^2.0.0"
+    "dev:server": "cd backend && npm run dev",
+    "dev:client": "cd frontend && npm run dev",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
   "devDependencies": {
-    "concurrently": "^8.2.1",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
-    "@types/express": "^4.17.17"
+    "concurrently": "^8.2.1"
   }
 }
