--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,10 @@
     "postcss": "^8.4.29",
     "autoprefixer": "^10.4.15",
     "clsx": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.2",
+    "@types/react": "^18.2.21",
+    "typescript": "^5.2.2"
   }
 }
